--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<canvas id="bg"></canvas>
 		<img src="/assets/hgci.png" alt="Mercury Workshop logo" width="128" height="128" />
-		<h1>Mercury Workshop</h1>
+		<h1>Mercury Crime International</h1>
 		<p>An organization of criminals dedicated to commiting horrific crimes for everyone.</p>
 		<h2>Public Projects</h2>
 		<div class="projects">
