--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="darkreader-lock" />
 		<meta name="msapplication-TileColor" content="#483475" />
 		<meta name="theme-color" content="#070b34" />
+		<meta name="Legal" content="this site is satire and a joke made in good fun, none of this is actually real"/>
 		<title>Mercury Crime International</title>
 		<link rel="stylesheet" href="/style/style.css" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/hgci.png" />
